Update description for mixed password challenge

--- a/index.html
+++ b/index.html
@@ -2464,7 +2464,7 @@
             {
                 id: 8,
                 title: "混合密码2",
-                description: "解密摩斯电码 '.-- -... --- .-..'，然后使用凯撒密码（密钥3）解密结果。",
+                description: "解密摩斯电码 '-.-. .... ..- .-.'，然后使用凯撒密码（密钥3）解密结果。",
                 type: "mixed",
                 answer: "ZERO",
                 unlocked: false
